2008-05-20  David Bateman  <dbateman@free.fr>

	* load-save.cc (do_load): Treat non verbose list_only output in
	the same manner as Fwho.
	* symtab.h (static void clear_variable_regexp (const
	std::string&): New method.
	(static std::list<symbol_record> regexp (const std::string&)): Ditto.
	(static std::list<symbol_record> regexp_variables (const
	std::string&)): Ditto.
	(static std::list<symbol_record> regexp_global_variables (const
	std::string&)): Ditto,
	(static std::list<symbol_record> regexp_variables (const
	string_vector&)): Ditto.
	(void do_clear_variable_regexp (const std::string&)): Ditto.
	(std::list<symbol_record> do_regexp (const std::string&, bool)
	const): Ditto.
	(do_who): Accept the "-regexp" option. Use regexp versions of
	symbol table functions.
	(static inline bool name_match_any_pattern (const string_vector&,
	int, int, bool): Add regexp argument, and use regexp matching if
	true.
	(do_clear_variables): Add regexp option and pass to
	name_match_any_pattern.
	(Fclear): Accept the -regexp option.

2008-05-07  John W. Eaton  <jwe@octave.org>

	* pt-arg-list.cc, pt-arg-list.h (tree_argument_list::dup):
	New arg, context.
	* pt-assign.cc, pt-assign.h (tree_simple_assignment::dup,
	tree_multi_assignment::dup): Likewise.
	* pt-binop.cc, pt-binop.h (tree_binary_expression::dup,
	tree_boolean_expression::dup): Likewise.
	* pt-cell.cc, pt-cell.h (tree_cell::dup): Likewise.
	* pt-cmd.cc, pt-cmd.h (tree_no_op_command::dup,
	tree_function_def::dup): Likewise.
	* pt-colon.cc, pt-colon.h (tree_colon_expression::dup): Likewise.
	* pt-const.cc, pt-const.h (tree_constant::dup): Likewise.
	* pt-decl.cc, pt-decl.h (tree_decl_elt::dup, tree_decl_init_list::dup,
	tree_global_command::dup, tree_static_command::dup): Likewise.
	* pt-except.cc, pt-except.h (tree_try_catch_command::dup,
	tree_unwind_protect_command::dup): Likewise.
	* pt-exp.h (tree_expression:dup): Likewise.
	* pt-fcn-handle.cc, pt-exp.h (tree_expression:dup): Likewise.